# TESP2018

./: .gitignore  README.md
dependencies/vib_touch/vib_touch/: CMakeLists.txt
dependencies/vib_touch/vib_touch/include/alsa_haptic/: alsa_audio.hpp~  alsa_haptic.hpp
dependencies/vib_touch/vib_touch/launch/: vib_stft.launch  vib_touch.launch
dependencies/vib_touch/vib_touch/src/: vib_touch_sensor.cpp
hardware_cad/: vibrator_bracket_fittest.sldprt  vibrator_bracket_fittest.stl  vibrator_bracket_main.sldprt  vibrator_bracket_main.stl
puredata/: osc_test.pd
src/joy_feedback_ros/launch/: joy_feedback.launch
src/joy_feedback_ros/scripts/: Send_Imu.py  vib.py  vib2.py
src/joy_feedback_ros/src/: joy_feedback.cpp
src/tesp2018/: CMakeLists.txt  package.xml
src/tesp2018/launch/: start.launch
src/tesp2018/scripts/: audio_lib_only.py  imu_node.py  imu_node_vibrations.py  lidar_node.py  pd_test.py  quaternion.py
src/vib_touch/vib_touch/: package.xml  vib_touch.xml
src/vib_touch/vib_touch/launch/: vib_sensor.launch
src/vib_touch/vib_touch/src/: vib_touch_display.cpp  vib_touch_stft.cpp
src/vib_touch/vib_touch_msgs/: CMakeLists.txt
src/vib_touch/vib_touch_msgs/msg/: Spectrum.msg  VibArray.msg
src/vib_touch/vib_touch_ui/: CMakeLists.txt  package.xml  plugin.xml
src/vib_touch/vib_touch_ui/scripts/spectrum_visualization_vib/: spectrogram.py
