<?xml version="1.0"?>
<package>
  <name>vib_touch</name>
  <version>0.1.0</version>
  <description>Vib_Touch package</description>

  <maintainer email="nagano@rm.is.tohoku.ac.jp">hikaru</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>vib_touch_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>vib_touch_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/vib_touch.xml" />
  </export>
</package>
